--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^8.7.0",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0"
   }
 }
